@startuml

title __TASKMAN's Class Diagram__\n

  package taskman {
    class Initiator {
        {static} + main()
    }
  }
  

  package taskman {
    class Pair {
        + Pair()
        + getFirst()
        + getSecond()
    }
  }
  

  Pair o-- First : first
  Pair o-- Second : second


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
